# bunpkg

./: .gitignore  package.json  webpack.config.js  webpack.config.production.js  wrangler.toml  wrangler.toml.example
config/: webpack.config.js
src/: buffer.ts  env.ts  files.ts  index.ts  metadata.ts  registry.ts  resolve.ts  routes.ts  tarball.ts  types.ts
src/flate/: README.md  package.json  wasm_flate.d.ts  wasm_flate.js  wasm_flate_bg.d.ts  wasm_flate_bg.js  wasm_flate_bg.wasm
src/handlers/: getNpmFile.ts  getPackument.ts
src/stubs/: osenv.ts
src/utils/: files.ts  metadata.ts  mime.ts  registry.ts  resolve.ts  tarball.ts
src/wasm/: wasm_archive.d.ts  wasm_archive.js  wasm_archive_bg.d.ts  wasm_archive_bg.wasm
wasmlib/: Cargo.toml
wasmlib/src/: lib.rs
