[package]
name = "bunpkg_wasmlib"
version = "1.0.0"
description = "Supporting wasm library for bunpkg"
authors = ["Phil Pluckthun <phil@kitten.sh>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.43"
serde = "^1.0"
serde-wasm-bindgen = "0.1.3"
serde_bytes = "0.11.2"
libflate = "0.1.27"
tar = "0.4.26"

[profile.release]
lto = true
opt-level = "s"
